# ChangeLog for dev-perl/Module-Signature
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Module-Signature/ChangeLog,v 1.31 2011/05/13 14:07:51 tove Exp $

*Module-Signature-0.680.0 (13 May 2011)

  13 May 2011; Torsten Veller <tove@gentoo.org>
  +Module-Signature-0.680.0.ebuild:
  Version bump

  24 Apr 2011; Fabian Groffen <grobian@gentoo.org>
  Module-Signature-0.66.ebuild:
  Marked ~x86-solaris, bug #296509

  14 Jan 2011; Torsten Veller <tove@gentoo.org> -Module-Signature-0.55.ebuild,
  -Module-Signature-0.64.ebuild, -Module-Signature-0.65.ebuild:
  Cleanup

  05 Nov 2010; Markos Chandras <hwoarang@gentoo.org>
  Module-Signature-0.66.ebuild:
  Stable on amd64 wrt bug #341865

  04 Nov 2010; Christian Faulhammer <fauli@gentoo.org>
  Module-Signature-0.66.ebuild:
  x86 stable, bug 341865

*Module-Signature-0.66 (09 Sep 2010)

  09 Sep 2010; Torsten Veller <tove@gentoo.org>
  +Module-Signature-0.66.ebuild:
  Version bump

*Module-Signature-0.65 (04 Sep 2010)

  04 Sep 2010; Torsten Veller <tove@gentoo.org>
  +Module-Signature-0.65.ebuild:
  Version bump

  15 Aug 2010; Torsten Veller <tove@gentoo.org>
  -Module-Signature-0.61.ebuild, -Module-Signature-0.62.ebuild,
  -Module-Signature-0.63.ebuild:
  Cleanup

*Module-Signature-0.64 (09 May 2010)

  09 May 2010; Torsten Veller <tove@gentoo.org>
  +Module-Signature-0.64.ebuild:
  Version bump

*Module-Signature-0.63 (23 Apr 2010)

  23 Apr 2010; Robin H. Johnson <robbat2@gentoo.org>
  +Module-Signature-0.63.ebuild:
  Version bump via perl-bump experimental tool.

*Module-Signature-0.62 (28 Mar 2010)

  28 Mar 2010; Robin H. Johnson <robbat2@gentoo.org>
  +Module-Signature-0.62.ebuild:
  Version bump via perl-bump experimental tool.

*Module-Signature-0.61 (22 Nov 2009)

  22 Nov 2009; Robin H. Johnson <robbat2@gentoo.org>
  +Module-Signature-0.61.ebuild:
  Version bump via perl-bump experimental tool.

  19 Jul 2009; Torsten Veller <tove@gentoo.org>