@@ -1,16 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA1
 
 DIST Module-Signature-0.66.tar.gz 71681 RMD160 13855e01730ba73c44bc5cd4cc1a71f02a284670 SHA1 4be9c0d0549ce4cbd53e0307f02e7c26c0559086 SHA256 33482264353d1897c028a84462c67adefcbe2a6a80374b47ea10d7d5816d31d3
 DIST Module-Signature-0.68.tar.gz 76485 RMD160 085be64591540e9b18b5c7a861f8222904ef9871 SHA1 d7d640650d6917e30d46d50b9d8806c7abf88a6e SHA256 623d7d8d26dceac49b043f5bc2d83eea95d6dd75bf09200a6631180774c8eb5f
 EBUILD Module-Signature-0.66.ebuild 1020 RMD160 1581d9a1486dc68a5be7d7615059ffca756ea8b1 SHA1 88b931c865adbcf7c91287bfac04b71909f2acec SHA256 7e33300f5eb9f8f2e781bfd69fc2a062edb889bf439d3ef54f9bbe65cc9c8602
-EBUILD Module-Signature-0.680.0.ebuild 1083 RMD160 f19d447d4e68ee12a652afcdc3403b3a927ed067 SHA1 fedfab5e66ae5c4f037e8d3976afb7494cb241f6 SHA256 27adb83f6277e0ecb72713b71fb554bb4e776f79c0502d46f01300839ce5a2b0
-MISC ChangeLog 5383 RMD160 b3ba91034d9be4a42c8a153ea81ce588c1e02d91 SHA1 83c99452f4b727fd6141b9c5c3a4c651686cf200 SHA256 f88c6352a160ecf0cfe0327160d9f37aacf4e919ed6c56c1a8a3f3d65b8fe513
+EBUILD Module-Signature-0.680.0.ebuild 1086 RMD160 f21b6e98ed815dc48709519302d2634f08ff7139 SHA1 877fa370395848497c8286175694dee87907ff17 SHA256 4a79b5a2968ce546b072337794143174431e6d431a0bef6323e839c0fd173070
+MISC ChangeLog 5618 RMD160 98bd9dd71ac29ea86b285ea819e0308de4c83573 SHA1 270f0efc8da85f8770cf5043395be04d224e4927 SHA256 842080e4bc191e51bef7c366aa88fc2b26977bfd90d33bcd555ab4f4bafeb00f
 MISC metadata.xml 242 RMD160 f028bf2104e6d1ac6c274b1c66669c2c63a4a257 SHA1 7c0f315ff7f83e928e23761e9644ac869ae86762 SHA256 c5e27da1f9a1938223cb02053ef0e3b49ab73250e66e561d81f79f0a2e0dea1d
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEAREIAAYFAk3NOz0ACgkQV3J2n04EauxFCQCeOmD67AxUZv+dbqOoysGr6KqR
-UrgAn1vNZzcR6eDblrPlkn7uK6oq02cx
-=FRS3
+iEYEARECAAYFAk6K71QACgkQp5vW4rUFj5oT6wCgnuc27JSzb0mUY8d2cOw9ybMr
+KiUAnj2tFu6dl2pM2lQIqdYMpW4ionnj
+=hjfM
 -----END PGP SIGNATURE-----
