@@ -1,16 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA1
 
 AUX pidgin-2.10.0-utf8-validation.patch 908 RMD160 0f98c6dd6cd9c63b3d61c85a9f18a07a38616115 SHA1 9876a7d8902d85e759c1dff1d8ea55cedaccd293 SHA256 288acd1f638fa1e21e216d48f308ef5f0397ddea2c1309e767391411ab02fbf4
 DIST pidgin-2.10.0.tar.bz2 9941288 RMD160 316e948bc4db03b160962b4ee2b1df64d35be335 SHA1 859c6d9c9795c1adcf762b73e072e04a3a85a78d SHA256 f31f6a32c03e870a1774c827b8cee47ae8edd2c1ba8db98e8d58d9911cbaafcd
-EBUILD pidgin-2.10.0-r1.ebuild 6637 RMD160 fb6f952ca7488f313eb10e52447436ab138a643a SHA1 f114fae9378ff8c55be4ef48423afb189dd89625 SHA256 8a8fb26fbd27581c4dc1fa40ee05e0f87b5f51d798a7648e280159a6a759adfd
+EBUILD pidgin-2.10.0-r1.ebuild 6640 RMD160 de6b78d02f83d08058030b2b6d2c5ffdc19e4d3f SHA1 1e3587401fb39b7eb9aca46ebe9f61b3a14ee972 SHA256 1dfc0db9124f22b7eadd55f427c0ddfdb7b0489ab7e2551d3f2928e99570c256
 EBUILD pidgin-2.10.0.ebuild 6562 RMD160 315417db0c83cf819855ed8a84208896e8fa9ca3 SHA1 00e92fd46abaad91ff477425dd34cdff690cd6ab SHA256 fb96ec891ddbccf26adb2ac8db78e1e3a3bb97decb1adecba9faddfe48a9a05c
-MISC ChangeLog 35914 RMD160 382526a0c5e4323621e579e2bc85bdd43ff16307 SHA1 a23b2bf87a41903ee4b187d4f62ff65fc05162ab SHA256 0521a188a6af90c570cba5053a326dda0a6f934ee78778932f33737c6f0c5d5d
+MISC ChangeLog 36137 RMD160 f0e24275f70a9e2c2929e2991102e7ab1641e40a SHA1 acccb2b05228860417e1490bf87b0e15c54e7057 SHA256 e673ac80d1579634412667e724ea9a5e384aec14431f4a63d50958ce2dcd701f
 MISC metadata.xml 1296 RMD160 d6ab4c09d3afc6a8a25a73f53aa784d9f53eacb0 SHA1 86cb3766fb6a8e87e749775c8a2f2e47a78cdb79 SHA256 21de4b3da6adef1ed3666a435937e637250a5699b8061cae28bcae4fc52f71c0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk6IqWIACgkQGrk+8vGYmwfPkAEA4Ay4bXxcwykhbnOp9X3WVQxU
-JmTn7VXNfVt4DSsOs1UA/0noiYQ1TNFVenpVLT6Y8kknv4M/66UzuFqH50SJTZcr
-=OU8x
+iEYEARECAAYFAk6Kvk8ACgkQB6aLYPQCwOC3dACeLTkZC/NQ5KQkfFNVJ1mlnu4h
+gicAoINJUtuOqEY+ZD8iVnSxPXDZhT7B
+=/deE
 -----END PGP SIGNATURE-----
