@@ -1,6 +1,12 @@
 # ChangeLog for net-im/pidgin
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/pidgin/ChangeLog,v 1.253 2011/10/02 18:13:16 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/pidgin/ChangeLog,v 1.255 2011/10/04 08:05:40 nativemad Exp $
+
+  04 Oct 2011; Andreas Schuerch <nativemad@gentoo.org> pidgin-2.10.0-r1.ebuild:
+  x86 stable, Bug 385073
+
+  03 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org> pidgin-2.10.0-r1.ebuild:
+  ppc/ppc64 stable wrt #385073
 
 *pidgin-2.10.0-r1 (02 Oct 2011)
 
